made changes to the names on the auth page,user, and business pages

--- a/user.html
+++ b/user.html
@@ -2950,7 +2950,7 @@
                 <p id="welcome-subtitle">Your actions are making a real difference.</p>
             </div>
             <div class="profile-avatar">
-                <img src="./img/ahmed-al-falahi.jpeg" alt="Ahmed Al Falahi" />
+                <img src="./img/Muneera Kamil.jpg" alt="Muneera Kamil" />
             </div>
         </header>
 
@@ -4195,7 +4195,7 @@
             <section id="profile-section" class="page-section hidden">
                 <div class="profile-header">
                     <div class="profile-avatar creator-avatar small" style="background-image: url('./img/ahmed-al-falahi.jpeg')"> </div>
-                    <h2 id="profile-name">Ahmed Al Falahi</h2>
+                    <h2 id="profile-name">Muneera Kamil</h2>
                     <p id="profile-email">demo.user@example.com</p>
                 </div>
                 <div class="profile-options">
