made few changes to the names

--- a/user.html
+++ b/user.html
@@ -2946,7 +2946,7 @@
 
         <header>
             <div class="welcome-message">
-                <h1 id="welcome-title">Welcome back, Ahmed!</h1>
+                <h1 id="welcome-title">Welcome back, Muneera!</h1>
                 <p id="welcome-subtitle">Your actions are making a real difference.</p>
             </div>
             <div class="profile-avatar">
@@ -4194,7 +4194,7 @@
             <!-- PROFILE SECTION -->
             <section id="profile-section" class="page-section hidden">
                 <div class="profile-header">
-                    <div class="profile-avatar creator-avatar small" style="background-image: url('./img/ahmed-al-falahi.jpeg')"> </div>
+                    <div class="profile-avatar creator-avatar small" style="background-image: url('./img/Muneera Kamil.jpg')"> </div>
                     <h2 id="profile-name">Muneera Kamil</h2>
                     <p id="profile-email">demo.user@example.com</p>
                 </div>
@@ -4528,7 +4528,7 @@
                         });
                     } 
                     else if (targetId === 'home-section') {
-                        welcomeTitle.textContent = "Welcome Back, Ahmed!";
+                        welcomeTitle.textContent = "Welcome Back, Muneera!";
                         welcomeSubtitle.textContent = "Let's make a difference today!";
                     } else {
                         // Default: use nav label and section name
