made few changes text wise

--- a/admin.html
+++ b/admin.html
@@ -1027,7 +1027,7 @@
                     <!-- Campaign 1 -->
                     <div class="glass-card campaign-card" data-status="active" data-participants="1250" data-date="2023-10-15">
                         <div class="campaign-image">
-                            <img src="https://images.unsplash.com/photo-1542838132-92c53300491e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Ne'ma National Campaign">
+                            <img src="https://www.ccifranceuae.com/fileadmin/_processed_/3/d/csm_nema-logo_fbdd447a90.png" alt="Ne'ma National Campaign">
                         </div>
                         <div class="campaign-content">
                             <h3 class="campaign-title">Ne'ma National Food Saving Initiative</h3>
@@ -1048,10 +1048,10 @@
                             <h3 class="campaign-title">Dubai Food Rescue Challenge</h3>
                             <p class="campaign-description">Join Dubai's mission to become a zero-food-waste city by 2030. Participate in our monthly challenges and win exciting rewards.</p>
                             <div class="campaign-stats">
-                                <span><i class="fas fa-users"></i> 842 participants</span>
-                                <span><i class="fas fa-calendar"></i> Ends in 8 days</span>
+                                <span><i class="fas fa-users"></i> 0 participants</span>
+                                <span><i class="fas fa-calendar"></i> Starts in 8 days</span>
                             </div>
-                            <span class="campaign-status status-active">Active</span>
+                            <span class="campaign-status status-pending">Pending</span>
                         </div>
                     </div>
                     <!-- Campaign 3 -->
@@ -1072,16 +1072,16 @@
                     <!-- Campaign 4 -->
                     <div class="glass-card campaign-card" data-status="completed" data-participants="956" data-date="2023-08-05">
                         <div class="campaign-image">
-                            <img src="https://images.unsplash.com/photo-1556909114-f6e7ad7d3136?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Ramadan Food Drive">
+                            <img src="https://mmo.aiircdn.com/265/68103bfeac6db.jpg" alt="Ramadan Food Drive">
                         </div>
                         <div class="campaign-content">
                             <h3 class="campaign-title">Ramadan Food Blessings Initiative</h3>
                             <p class="campaign-description">Our annual Ramadan campaign to redistribute surplus iftar meals to those in need across all seven emirates.</p>
                             <div class="campaign-stats">
                                 <span><i class="fas fa-users"></i> 956 participants</span>
-                                <span><i class="fas fa-calendar"></i> Completed</span>
+                                <span><i class="fas fa-calendar"></i> Ends in 3 days</span>
                             </div>
-                            <span class="campaign-status status-completed">Completed</span>
+                            <span class="campaign-status status-active">Active</span>
                         </div>
                     </div>
                 </div>
