--- a/business.html
+++ b/business.html
@@ -410,7 +410,7 @@
                     </div>
                     <div class="glass-card stat-card">
                         <i class="fas fa-dollar-sign"></i>
-                        <div class="value" id="weekly-revenue">$14,200</div>
+                        <div class="value" id="weekly-revenue">5,000 AED</div>
                         <div class="label" id="revenue-label">Revenue (This Week)</div>
                     </div>
                     <div class="glass-card stat-card">
