--- a/user.html
+++ b/user.html
@@ -3182,7 +3182,7 @@
                 <div class="budget-section">
                     <div class="budget-header">
                         <span class="budget-label">Monthly Budget</span>
-                        <span class="budget-amount">2,500 AED</span>
+                        <span class="budget-amount">1,000 AED</span>
                     </div>
                     
                     <div class="budget-progress">
@@ -3190,8 +3190,8 @@
                             <div class="progress-fill" style="width: 48%"></div>
                         </div>
                         <div class="budget-details">
-                            <span class="spent">1,200 AED Spent</span>
-                            <span class="remaining">1,300 AED Remaining</span>
+                            <span class="spent">600 AED Spent</span>
+                            <span class="remaining">400 AED Remaining</span>
                         </div>
                     </div>
                 </div>
@@ -3566,7 +3566,35 @@
                                 <p>Partnering with local restaurants to reduce kitchen waste</p>
                                 <div class="campaign-stats">
                                     <span><i class="fas fa-utensils"></i> 234 restaurants</span>
-                                    <span><i class="fas fa-leaf"></i> 2.3k kg saved</span>
+                                    <span><i class="fas fa-leaf"></i> 2.3k tonnes saved</span>
+                                </div>
+                            </div>
+                            <button class="action-btn">Join Campaign</button>
+                        </div>
+
+                        <div class="glass-card campaign-card">
+                            <img src="https://mmo.aiircdn.com/265/68103bfeac6db.jpg"
+                                alt="Restaurant Initiative">
+                            <div class="campaign-info">
+                                <h4>Ramadan Food Blessing Initiative</h4>
+                                <p>Ramadan campaign to redistribute surplus iftar meals to those in need across all seven emirates</p>
+                                <div class="campaign-stats">
+                                    <span><i class="fas fa-utensils"></i> 234 restaurants</span>
+                                    <span><i class="fas fa-utensils"></i> 2.3k Meals Distributed</span>
+                                </div>
+                            </div>
+                            <button class="action-btn">Join Campaign</button>
+                        </div>
+
+                        <div class="glass-card campaign-card">
+                            <img src="https://www.ccifranceuae.com/fileadmin/_processed_/3/d/csm_nema-logo_fbdd447a90.png"
+                                alt="Restaurant Initiative">
+                            <div class="campaign-info">
+                                <h4>Ne'ma National Food Saving Initiative</h4>
+                                <p>A nationwide campaign to reduce food waste across the UAE, in partnership with the Ministry of Climate Change and Environment</p>
+                                <div class="campaign-stats">
+                                    <span><i class="fas fa-users"></i>  1,250 participants</span>
+                                    <span><i class="fas fa-calendar"></i> Ends in 15 days</span>
                                 </div>
                             </div>
                             <button class="action-btn">Join Campaign</button>
