made changes to the user graph and impact stats

--- a/user.html
+++ b/user.html
@@ -2973,8 +2973,9 @@
                             <div class="label">Points Earned</div>
                         </div>
                         <div class="glass-card stat-card"><i class="fas fa-leaf"></i>
-                            <div class="value">45kg</div>
-                            <div class="label">CO₂ Saved</div>
+                            <div class="value">0.228</div>
+                            <div class="label">CO₂ tonnes Saved</div>
+                            <div class="label">You have saved 11 trees worth of CO₂!</div>
                         </div>
                     </div>
                     <div class="slider-dots">
@@ -4338,7 +4339,7 @@
                             title: {
                                 display: true,
                                 text: 'Number of Meals Rescued',
-                                color: '#F0F4F8',
+                                color: '#4A4A4A',
                                 font: {
                                     family: "'Poppins', sans-serif",
                                     size: 14,
@@ -4348,7 +4349,7 @@
                             },
                             grid: { color: 'rgba(240, 244, 248, 0.1)' },
                             ticks: {
-                                color: '#F0F4F8',
+                                color: '#4A4A4A',
                                 font: { family: "'Poppins', sans-serif" },
                                 padding: 5
                             }
@@ -4357,7 +4358,7 @@
                             title: {
                                 display: true,
                                 text: 'Days of the Week',
-                                color: '#F0F4F8',
+                                color: '#4A4A4A',
                                 font: {
                                     family: "'Poppins', sans-serif",
                                     size: 14,
@@ -4367,7 +4368,7 @@
                             },
                             grid: { display: false },
                             ticks: {
-                                color: '#F0F4F8',
+                                color: '#4A4A4A',
                                 font: { family: "'Poppins', sans-serif" },
                                 padding: 5
                             }
