--- a/user.html
+++ b/user.html
@@ -2943,6 +2943,96 @@
     background: rgba(220, 53, 69, 0.4);
     color: #ff4d60;
 }}
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+        text-align: center;
+    }
+    .profile-avatar {
+        width: 48px;
+        height: 48px;
+        font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+    }
+    .welcome-message h1 {
+        font-size: 1.3rem;
+    }
+    .welcome-message p {
+        font-size: 1rem;
+    }
+    .glass-card[style*="margin-bottom: 2rem"] > div {
+        flex-direction: column !important;
+        align-items: center !important;
+        gap: 1rem !important;
+    }
+    .glass-card[style*="margin-bottom: 2rem"] .action-btn {
+        margin-top: 1rem;
+        width: 100%;
+    }
+    /* News Section */
+    .news-slider-container {
+        margin-bottom: 1rem;
+        padding: 0;
+    }
+    .news-slider {
+        width: 100%;
+    }
+    .news-card {
+        min-width: 100% !important;
+        margin: 0 !important;
+        padding: 0.5rem !important;
+        border-radius: 14px !important;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        box-sizing: border-box;
+    }
+    .news-image {
+        height: 140px !important;
+        border-radius: 14px 14px 0 0 !important;
+        object-fit: cover;
+        width: 100%;
+    }
+    .news-content {
+        padding: 1rem !important;
+    }
+    .impact-section {
+        padding: 0.7rem !important;
+        margin: 0.7rem 0 !important;
+    }
+    .news-slider-dots {
+        gap: 0.2rem;
+        margin-top: 0.5rem;
+    }
+}
+@media (max-width: 480px) {
+    .profile-avatar {
+        width: 36px;
+        height: 36px;
+        font-size: 1rem;
+    }
+    .welcome-message h1 {
+        font-size: 1rem;
+    }
+    .glass-card {
+        padding: 0.5rem;
+        border-radius: 10px;
+    }
+    .news-image {
+        height: 90px !important;
+    }
+    .news-content h3 {
+        font-size: 1rem !important;
+    }
+    .news-brief {
+        font-size: 0.85rem !important;
+    }
+    .impact-section h4 {
+        font-size: 0.85rem !important;
+    }
+}
     </style>
 </head>
 
