changed the bridgepoint to be for managing subscription and not license

--- a/business.html
+++ b/business.html
@@ -1068,25 +1068,25 @@
                 <!-- Licensing & Registration Tab -->
                 <div id="licensing" class="bridgepoint-content active">
                     <div class="compliance-card">
-                        <h3><i class="fas fa-file-contract"></i> <span id="apply-license-title">Apply for New Business License</span></h3>
-                        <p id="apply-license-desc">Submit your application for a new business license. Our team will review your documents and contact you within 3-5 business days.</p>
+                        <h3><i class="fas fa-file-contract"></i> <span id="apply-license-title">Apply for New Business subscription</span></h3>
+                        <p id="apply-license-desc">Submit your application for a new business subscription. Our team will review your documents and contact you within 3-5 business days.</p>
                         <button class="action-bar">
                             <i class="fas fa-plus"></i> <span id="apply-license-btn">Apply Now</span>
                         </button>
                     </div>
                     <div class="compliance-card">
-                        <h3><i class="fas fa-sync-alt"></i> <span id="renew-license-title">Renew Existing License</span></h3>
-                        <p id="renew-license-desc">Check the status of your current license and renew before expiration to avoid any interruptions to your business operations.</p>
+                        <h3><i class="fas fa-sync-alt"></i> <span id="renew-license-title">Renew subscription</span></h3>
+                        <p id="renew-license-desc">Check the status of your current subscription and renew before expiration to avoid any interruptions to your business operations.</p>
                         <div class="compliance-status status-compliant">
-                            <i class="fas fa-check-circle"></i> <span id="license-status">License Active - Expires: Dec 15, 2024</span>
+                            <i class="fas fa-check-circle"></i> <span id="license-status">subscription Active - Expires: Dec 15, 2024</span>
                         </div>
                         <button class="action-bar">
-                            <i class="fas fa-sync"></i> <span id="renew-license-btn">Renew License</span>
+                            <i class="fas fa-sync"></i> <span id="renew-license-btn">Renew subscription</span>
                         </button>
                     </div>
                     <div class="compliance-card">
                         <h3><i class="fas fa-upload"></i> <span id="upload-docs-title">Upload Required Documents</span></h3>
-                        <p id="upload-docs-desc">Upload necessary documents for your license application or renewal. Accepted formats: PDF, JPG, PNG (max 10MB).</p>
+                        <p id="upload-docs-desc">Upload necessary documents for your subscription application or renewal. Accepted formats: PDF, JPG, PNG (max 10MB).</p>
                         <div class="upload-area" id="document-upload">
                             <i class="fas fa-cloud-upload-alt"></i>
                             <p id="upload-prompt">Click to upload or drag and drop files here</p>
@@ -2084,16 +2084,17 @@
                 // BridgePoint Tabs
                 'nav-BridgePoint': 'BridgePoint',
                 'BridgePoint-title': 'BridgePoint Compliance Portal',
+                'permits': 'Permits & Certifications',
                 // Licensing & Registration
-                'apply-license-title': 'Apply for New Business License',
-                'apply-license-desc': 'Submit your application for a new business license. Our team will review your documents and contact you within 3-5 business days.',
+                'apply-license-title': 'Apply for New Business subscription',
+                'apply-license-desc': 'Submit your application for a new business subscription. Our team will review your documents and contact you within 3-5 business days.',
                 'apply-license-btn': 'Apply Now',
-                'renew-license-title': 'Renew Existing License',
-                'renew-license-desc': 'Check the status of your current license and renew before expiration to avoid any interruptions to your business operations.',
-                'license-status': 'License Active - Expires: Dec 15, 2024',
-                'renew-license-btn': 'Renew License',
+                'renew-license-title': 'Renew Existing subscription',
+                'renew-license-desc': 'Check the status of your current subscription and renew before expiration to avoid any interruptions to your business operations.',
+                'license-status': 'subscription Active - Expires: Dec 15, 2024',
+                'renew-license-btn': 'Renew subscription',
                 'upload-docs-title': 'Upload Required Documents',
-                'upload-docs-desc': 'Upload necessary documents for your license application or renewal. Accepted formats: PDF, JPG, PNG (max 10MB).',
+                'upload-docs-desc': 'Upload necessary documents for your subscription application or renewal. Accepted formats: PDF, JPG, PNG (max 10MB).',
                 'upload-prompt': 'Click to upload or drag and drop files here',
                 // Permits & Certifications
                 'food-permit-title': 'Food Safety / Health Permits',
@@ -2245,15 +2246,15 @@
                 'nav-BridgePoint': 'بوابة الامتثال',
                 'BridgePoint-title': 'بوابة الامتثال BridgePoint',
                 // Licensing & Registration
-                'apply-license-title': 'التقدم بطلب للحصول على رخصة عمل جديدة',
-                'apply-license-desc': 'قدم طلبك للحصول على رخصة عمل جديدة. سيقوم فريقنا بمراجعة مستنداتك والاتصال بك خلال 3-5 أيام عمل.',
+                'apply-license-title': 'التقدم بطلب للحصول على اشتراك جديد',
+                'apply-license-desc': 'قدم طلبك للحصول على اشتراك جديد. سيقوم فريقنا بمراجعة مستنداتك والاتصال بك خلال 3-5 أيام عمل.',
                 'apply-license-btn': 'تقدم الآن',
-                'renew-license-title': 'تجديد الرخصة الحالية',
-                'renew-license-desc': 'تحقق من حالة رخصتك الحالية وجددها قبل انتهاء الصلاحية لتجنب أي انقطاع في عمليات عملك.',
-                'license-status': 'الرخصة نشطة - تنتهي في: 15 ديسمبر 2024',
-                'renew-license-btn': 'تجديد الرخصة',
+                'renew-license-title': 'تجديد الاشتراك الحالي',
+                'renew-license-desc': 'تحقق من حالة اشتراكك الحالي وجدده قبل انتهاء الصلاحية لتجنب أي انقطاع في عمليات عملك.',
+                'license-status': 'الاشتراك نشط - ينتهي في: 15 ديسمبر 2024',
+                'renew-license-btn': 'تجديد الاشتراك',
                 'upload-docs-title': 'تحميل المستندات المطلوبة',
-                'upload-docs-desc': 'قم بتحميل المستندات اللازمة لطلب أو تجديد رخصتك. الصيغ المقبولة: PDF، JPG، PNG (بحد أقصى 10 ميجابايت).',
+                'upload-docs-desc': 'قم بتحميل المستندات اللازمة لطلب أو تجديد اشتراكك. الصيغ المقبولة: PDF، JPG، PNG (بحد أقصى 10 ميجابايت).',
                 'upload-prompt': 'انقر للتحميل أو اسحب وأفلت الملفات هنا',
                 // Permits & Certifications
                 'food-permit-title': 'تصاريح السلامة الغذائية / الصحية',
@@ -2364,6 +2365,8 @@
                 'environmental-chart-title': 'الأثر البيئي',
                 'download-text': 'تنزيل البيانات',
                 'certificate-text': 'إنشاء شهادة الأثر',
+                'CO2e': 'ثاني أكسيد الكربون المعادل',
+                'Water': 'المياه (لتر)',
                 // Messages
                 'messages-title': 'الرسائل والطلبات',
                 'Muneera-contact': 'منيرة ك.',
