now its fixed in a better way, index page

--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
             },
             ar: {
                 // Hero section
-                'hero-paragraph': 'معًا عبر الإمارات العربية المتحدة، نحن نخلق مستقبلًا أكثر إشراقًا وخضرة،وجبة لذيذة في كل مرة. وفر المال، قلل من النفايات، واجعل كل لقمة تحسب نحو كوكب أكثر سعادة.',
+                'hero-paragraph': 'معًا عبر الإمارات العربية المتحدة، نحن نخلق مستقبلًا أكثر إشراقًا وخضرة،وجبة لذيذة في كل مرة. وفر المال، قلل من الهدر واجعل كل لقمة تحسب نحو كوكب أكثر سعادة.',
                 'joinmovbtn':'كن من صناع التغيير',
 
                 // About section
