now this should work and read better

--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                 'about-title': 'تمكين مجتمعنا',
                 'about-paragraph': 'نؤمن أن قوة تغيير العالم تكمن في العمل المحلي. يربط نعمتك الجيران مع الشركات المحلية لإنشاء دورة من الفرص والاستدامة والطعام اللذيذ.',
                 'mission1-title': 'إنقاذ الوجبات',
-                'mission1-desc': 'عزز الأمن الغذائي لمجتمعنا وقلل من النفايات في مكبات النفايات المحلية مع كل وجبة يتم إنقاذها.',
+                'mission1-desc': 'عزز الأمن الغذائي لمجتمعنا وقلل من الهدر مع كل وجبة يتم إنقاذها.',
                 'mission2-title': 'دعم المحلي',
                 'mission2-desc': 'ساعد المقاهي والبقالين والمطاعم المحلية على تحويل الخسائر المحتملة إلى مصدر دخل جديد.',
                 'mission3-title': 'توحيد الأبطال',
