--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                     <img src="./img/logo.png" alt="Ne'matuk Logo" class="hero-logo-img">
                     <h1>Ne'matuk</h1>
                     <h2 class="arabic-title">نعمتك</h2>
-                    <p style="margin-bottom: 0;" id="hero-paragraph">Together across the UAE, we're creating a brighter, greener future—one delicious meal at a time. Save money, reduce waste, and make every bite count toward a happier planet.</p>
+                    <p style="margin-bottom: 0;" id="hero-paragraph">Together across the UAE, we're creating a brighter, greener future one delicious meal at a time. Save money, reduce waste, and make every bite count toward a happier planet.</p>
                     <div class="hero-social-links">
                         <a href="#" class="social-icon-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="social-icon-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
@@ -945,3 +945,4 @@
 </body>
 
 </html>
+
