added Donation button to meals

--- a/user.html
+++ b/user.html
@@ -2896,6 +2896,8 @@
                         </div>
                         <div class="food-action">
                             <div class="price">15 AED</div><button class="action-btn" data-en="Rescue" data-ar="إنقاذ">Rescue</button>
+                            <div class="price">      </div><button class="action-btn" data-en="Donate" data-ar="تبرع">Rescue</button>
+
                         </div>
                     </div>
                     <div class="glass-card food-card"><img
@@ -2907,6 +2909,8 @@
                         </div>
                         <div class="food-action">
                             <div class="price">20 AED</div><button class="action-btn" data-en="Rescue" data-ar="إنقاذ">Rescue</button>
+                            <div class="price">      </div><button class="action-btn" data-en="Donate" data-ar="تبرع">Rescue</button>
+
                         </div>
                     </div>
                 </div>
