--- a/user.html
+++ b/user.html
@@ -2782,8 +2782,29 @@
     </style>
 </head>
 <body>
-         <button id="language-toggle" class="language-toggle">EN</button>
-    <div id="particles-js"></div>
+<div style="position: fixed; top: 20px; left: 20px; z-index: 1001; display: flex; align-items: center; flex-wrap: nowrap; gap: 10px;">
+    <button id="language-toggle" class="language-toggle" style="white-space: nowrap; padding: 8px 12px; border: none; border-radius: 20px; background: var(--glass-bg); cursor: pointer; font-size: 1rem; transition: background 0.3s ease;">
+        EN
+    </button>
+    <span id="cart-icon" style="display: inline-flex; align-items: center; justify-content: center; width: 44px; height: 44px; flex-shrink: 0; background: var(--glass-bg); border: 1px solid var(--glass-border); border-radius: 25px; font-size: 1.5rem; cursor: pointer; box-shadow: 0 4px 15px rgba(0,0,0,0.08); transition: all 0.3s ease;">
+        <img src="./img/image-removebg-preview (20).png" alt="Shopping cart icon showing 0 items in cart." 
+             style="width: 28px; height: 28px; object-fit: contain; vertical-align: middle;" />
+    </span>
+
+    <style>
+        #cart-icon:hover {
+            transform: scale(1.08);
+            box-shadow: 0 8px 24px rgba(73, 231, 205, 0.18);
+            background: var(--primary-accent);
+            border-color: var(--secondary-accent);
+        }
+
+        .language-toggle:hover {
+            background: var(--primary-accent);
+        }
+    </style>
+</div>
+        <div id="particles-js"></div>
     <div class="dashboard-container">
         <header>
             <div class="welcome-message">
@@ -4056,7 +4077,7 @@
                 <div class="profile-header">
                     <div class="profile-avatar creator-avatar small"
                         style="background-image: url('./img/Muneera Kamil.jpg')"> </div>
-                    <h2 id="profile-name" data-en="Muneera Kamil" data-ar="منيرة كميل">Muneera Kamil</h2>
+                    <h2 id="profile-name" data-en="Muneera Kamil" data-ar="منيرة كامل">Muneera Kamil</h2>
                     <p id="profile-email" data-en="demo.user@example.com" data-ar="demo.user@example.com">demo.user@example.com</p>
                 </div>
                 <div class="profile-options">
