changed some words

--- a/food-metrics.html
+++ b/food-metrics.html
@@ -983,7 +983,7 @@ body {
                 // AI Insights
                 aiInsights: "رؤى الذكاء الاصطناعي",
                 smartSuggestions: "اقتراحات ذكية",
-                anomalyDetection: "كشف الشذوذ",
+                anomalyDetection: "اكتشاف المخاطر",
                 
                 // Insight items
                 suggestion1: "فكر في إطلاق حملة مستهدفة في الشارقة، حيث أن معدلات المشاركة أقل بنسبة 15% من الإمارات الأخرى.",
