--- a/auth.html
+++ b/auth.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login / Sign Up | Ne'matuk</title>
+    <title>Login / Sign Up | Ne’matak</title>
 
     <!-- Swiper.js CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -343,7 +343,7 @@
                 <!-- Sign Up Slide -->
                 <div class="swiper-slide" id="signup-slide">
                     <div class="form-content">
-                        <h2 class="form-title" id="signup-title">Join Ne'matuk</h2>
+                        <h2 class="form-title" id="signup-title">Join Ne’matak</h2>
                         <p class="form-subtitle" id="signup-subtitle">Start your journey with us today</p>
                         
                         <div class="options-toggle signup-options">
@@ -449,7 +449,7 @@
                 'user-login-btn': 'Login',
                 'business-login-btn': 'Login as Business',
                 'employee-login-btn': 'Login as Employee',
-                'signup-title': 'Join Ne\'matuk',
+                'signup-title': 'Join Ne’matak',
                 'signup-subtitle': 'Start your journey with us today',
                 'user-signup-option': 'User',
                 'business-signup-option': 'Business',
