--- a/user.html
+++ b/user.html
@@ -4104,7 +4104,7 @@
             <li class="nav-item"><a href="#" data-target="explore-section"><i
                         class="fas fa-search"></i><span data-en="Explore" data-ar="استكشاف">Explore</span></a></li>
             <li class="nav-item"><a href="#" data-target="ai-recipes-section"><i
-                        class="fas fa-robot"></i><span data-en="NematukGPT" data-ar="نعمتك جي بي تي">NematukGPT</span></a></li>
+                        class="fas fa-robot"></i><span data-en="Ne’matakGPT" data-ar="نعمتك جي بي تي">Ne’matakGPT</span></a></li>
             <li class="nav-item"><a href="#" data-target="awareness-section"><i
                         class="fas fa-sprout"></i><span data-en="Awareness" data-ar="التوعية">Awareness</span></a></li>
             <li class="nav-item"><a href="#" data-target="rewards-section"><i
@@ -4115,7 +4115,7 @@
     </nav>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-   ```html
+
 <script>
     // Language toggle functionality
     document.addEventListener('DOMContentLoaded', function() {
@@ -4545,7 +4545,7 @@
                 }
                 // Update header title based on section
                 if (targetId === 'ai-recipes-section') {
-                    welcomeTitle.textContent = "NematukGPT Assistant";
+                    welcomeTitle.textContent = "Ne’matakGPT Assistant";
                     welcomeSubtitle.textContent = "Your smart food and budget management companion.";
                 } else if (targetId === 'awareness-section') {
                     welcomeTitle.textContent = "Community Awareness";
