--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                 <div class="overlay"></div>
                 <div class="container hero-content">
                     <img src="./img/logo.png" alt="Ne'matuk Logo" class="hero-logo-img">
-                    <h1>Ne'matuk</h1>
+                    <h1>Ne’matak</h1>
                     <h2 class="arabic-title">نعمتك</h2>
                     <p style="margin-bottom: 0;" id="hero-paragraph">Together across the UAE, we're creating a brighter, greener future one delicious meal at a time. Save money, reduce waste, and make every bite count toward a happier planet.</p>
                     <div class="hero-social-links">
